Add error message to API